--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     I'm an engineer based in Seattle, WA. Since graduating from the University of Notre Dame, I've worked for five years as a mechanical engineer focusing on repair and modernization of submarines and aircraft carriers for the U.S. Navy.               
                 </p>
                 <p>
-                    With a passsion for building and fixing things, I've begun exploring software engineering and intend to fully transition to it as a career. 
+                    With a passion for building and fixing things, I've begun exploring software engineering and intend to fully transition to it as a career. 
                 </p>
                 <p>
                     When I'm not working or learning about software, I enjoy hiking, skiing, woodworking, and cooking. 
